add filter by role
